--- a/templates/en/home.tmpl
+++ b/templates/en/home.tmpl
@@ -13,6 +13,6 @@
 {{range .icons}}<a href="/{{.path}}">{{.name}}</a><br/>{{end}}
 {{if len .icons}}</p>{{end}}
 
-<a href="/?action=logout">Log out</a></p>
+<a href="/logout">Log out</a></p>
 
 {{template "foot" .}}
