Move a.identity.id to a.user.identity.id, and a.identity.name to a.user.identity.name

--- a/templates/en/home.tmpl
+++ b/templates/en/home.tmpl
@@ -1,6 +1,6 @@
 {{define "title"}}Mochi{{end}}
 {{template "head" .}}
-<p class="header">Mochi | {{.user.username}}</p>
+<p class="header">Mochi | {{.username}}</p>
 
 {{if .welcome}}<p>Welcome to Mochi, the open source social operating system. Why not create <a href="/feeds/new/">a feed</a>?</p>{{end}}
 
